# abbreviation-extractor

./: .gitattributes  .gitignore  Cargo.toml  README.md  abbreviation_extractor.pyi  pyproject.toml
benches/: benchmark.py  benchmark.rs
src/: abbreviation_definitions.rs  candidate.rs  extraction.rs  lib.rs  utils.rs
