[package]
name = "abbreviation_extractor"
version = "0.1.4"
edition = "2021"
authors = ["Praise Oketola <oketola.praise@gmail.com>"]
description = "A library for extracting abbreviations from text."
license = "MIT"
repository = "https://github.com/praise2112/abbreviation-extractor"
keywords = ["abbreviation", "extraction", "nlp", "text-processing", "biomedical"]
categories = ["text-processing", "science", "algorithms"]
exclude = ["benches/pubmed_abstracts_20240801_to_20240809.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "abbreviation_extractor"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.22.0"
regex = "1.10.6"
lazy_static = "1.5.0"
rustc-hash = "2.0.0"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.3"
punkt_n = "1.0.5"
log = "0.4.22"
pyo3-log = "0.11.0"
num_cpus = "1.16.0"
indicatif = "0.17.8"

[dev-dependencies]
criterion = "0.5.1"
flamegraph = "0.6.5"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true